Revert "Revert "add Will's edits and fix send button on mobile font color""
This reverts commit dab827c43c35083e4760854a4d660216f67f77ff.

--- a/src/Contact/contact.css
+++ b/src/Contact/contact.css
@@ -177,7 +177,6 @@ input:focus {
     margin: 10px;
     text-transform: uppercase;
     color: white;
-<<<<<<< HEAD
     margin-left: 0;
 
   }
@@ -245,14 +244,11 @@ input:focus {
     padding: 10px;
     margin: 10px;
     text-transform: uppercase;
-=======
->>>>>>> parent of 974eaee (add Will's edits and fix send button on mobile font color)
     margin-left: 0;
 
   }
 
   .submitbutton:hover{
-    color: rgb(94, 98, 121);
     font-family: "NibPro-BoldItalic";
   
   }
